# tabelog3

./: .gitignore  README.md  dev.ipynb  dev_2.ipynb  dev_3.ipynb  dev_4.ipynb  dev_5.ipynb  dev_6.ipynb  dev_7.ipynb  dev_8.ipynb  fukushima.csv  kooriyama.csv  maebashi.csv  mito.csv  oyama.csv  pyproject.toml  store_url_list_fukushima.pkl  store_url_list_kooriyama.pkl  store_url_list_maebashi.pkl  store_url_list_mito.pkl  store_url_list_oyama.pkl  store_url_list_takasaki.pkl  store_url_list_tsukuba.pkl  store_url_list_utsunomiya.pkl  takasaki.csv  tsukuba.csv  utsunomiya.csv
